--- a/sdk/Lusid.Drive.Sdk/Lusid.Drive.Sdk.csproj
+++ b/sdk/Lusid.Drive.Sdk/Lusid.Drive.Sdk.csproj
@@ -1,39 +1,44 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Version>0.1.590</Version>
-        <PackageId>Lusid.Drive.Sdk</PackageId>
-        <Authors>engineering@finbourne.com</Authors>
-        <Company>FINBOURNE Technology Limited</Company>
-        <Product>LUSID Drive</Product>
-        <Description>LUSID Drive SDK</Description>
-        <RepositoryUrl>https://github.com/finbourne/drive-sdk-csharp-release</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-    </PropertyGroup>
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo><!-- setting GenerateAssemblyInfo to false causes this bug https://github.com/dotnet/project-system/issues/3934 -->
+    <TargetFramework>net6.0</TargetFramework>
+    <AssemblyName>Lusid.Drive.Sdk</AssemblyName>
+    <PackageId>Lusid.Drive.Sdk</PackageId>
+    <OutputType>Library</OutputType>
+    <Authors>FINBOURNE Technology Ltd</Authors>
+    <Company>FINBOURNE Technology Ltd</Company>
+    <AssemblyTitle>OpenAPI Library</AssemblyTitle>
+    <Description>A library generated from a OpenAPI doc</Description>
+    <Copyright>FINBOURNE Technology Ltd</Copyright>
+    <RootNamespace>Lusid.Drive.Sdk</RootNamespace>
+    <Version>2.0.0</Version>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Lusid.Drive.Sdk.xml</DocumentationFile>
+    <RepositoryUrl>https://github.com/finbourne/drive-sdk-csharp.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReleaseNotes>Minor update</PackageReleaseNotes>
+    <PackageTags>FINBOURNE, LUSID, SDK</PackageTags>
+    <Nullable>annotations</Nullable>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+  </PropertyGroup>
 
-    <PropertyGroup>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="JsonSubTypes" Version="2.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="108.0.3" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <WarningsAsErrors></WarningsAsErrors>
-        <NoWarn>1701;1702;CS0472;CS1573</NoWarn>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
-        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-preview.5.20278.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.5" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0-preview.5.20278.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="JsonSubTypes" Version="1.8.0" />
-        <PackageReference Include="Polly" Version="7.2.1" />
-        <PackageReference Include="RestSharp" Version="106.11.7" />
-        <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
-    </ItemGroup>
+  <PropertyGroup>
+    <WarningsAsErrors></WarningsAsErrors>
+    <NoWarn>1701;1702;CS0472;CS1573;CS0108;CS8073</NoWarn>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+  </ItemGroup>
 </Project>
